--- a/hacking-project/src/App.css
+++ b/hacking-project/src/App.css
@@ -1,5 +1,10 @@
+body {
+  background-color: black;
+}
+
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -35,4 +40,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+@font-face {
+  font-family: "heath";
+  font-weight: 114px;
+  src: url("./fonts/Heathfield.otf");
 }
